--- a/SuperID2/app/src/main/AndroidManifest.xml
+++ b/SuperID2/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/icon_launcher"
+        android:icon="@mipmap/icone_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/icon_launcher_round"
+        android:roundIcon="@mipmap/icone_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperID2"
         tools:targetApi="31">
