--- a/SuperID/app/src/main/AndroidManifest.xml
+++ b/SuperID/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.SuperID2"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity2asd"
+            android:exported="false"
+            android:label="@string/title_activity_main_activity2asd"
+            android:theme="@style/Theme.SuperID2" />
+        <activity
+            android:name=".MainActivitdasy2asd"
+            android:exported="false"
+            android:label="@string/title_activity_main_activitdasy2asd"
+            android:theme="@style/Theme.SuperID2" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
