--- a/SuperID/app/src/main/AndroidManifest.xml
+++ b/SuperID/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,45 +11,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperID"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".TermsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_termos"
+            android:theme="@style/Theme.SuperID" />
         <activity
             android:name=".WelcomeActivity"
             android:exported="true"
             android:label="@string/title_activity_welcome"
-            android:theme="@style/Theme.SuperID">
-
+            android:theme="@style/Theme.SuperID" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.SuperID" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.SuperID" />
-
         <activity
             android:name=".CadastroActivity"
             android:exported="false"
             android:label="@string/title_activity_cadastro"
             android:theme="@style/Theme.SuperID" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.SuperID" />
-
     </application>
 
 </manifest>
