--- a/SuperID/app/src/main/AndroidManifest.xml
+++ b/SuperID/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperID"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".QRCodeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_qrcode"
+            android:theme="@style/Theme.SuperID" />
+        <activity
+            android:name=".NewCategoryActivity"
+            android:exported="false"
+            android:label="@string/title_activity_new_category"
+            android:theme="@style/Theme.SuperID" />
+        <activity
+            android:name=".NewPasswordActivity"
+            android:exported="false"
+            android:label="@string/title_activity_new_password"
+            android:theme="@style/Theme.SuperID" />
         <activity
             android:name=".TermsActivity"
             android:exported="false"
@@ -21,7 +36,7 @@
             android:name=".WelcomeActivity"
             android:exported="true"
             android:label="@string/title_activity_welcome"
-            android:theme="@style/Theme.SuperID" >
+            android:theme="@style/Theme.SuperID">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
