--- a/SuperID/app/src/main/AndroidManifest.xml
+++ b/SuperID/app/src/main/AndroidManifest.xml
@@ -63,6 +63,12 @@
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.SuperID" />
+        <activity
+            android:name=".EditPasswordActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SuperID"
+            />
+
     </application>
 
 </manifest>
