--- a/SuperID/app/src/main/AndroidManifest.xml
+++ b/SuperID/app/src/main/AndroidManifest.xml
@@ -65,4 +65,9 @@
             android:theme="@style/Theme.SuperID" />
     </application>
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera.any" />
+
+
+
 </manifest>
